# RayMarching

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: Camera.hpp  CpuRayTracer.hpp  EventHandler.hpp  GpuRayTracer.hpp  UIManager.hpp  World.hpp
include/objects/: BlackHole.hpp  Object.hpp
shaders/: raytracer.frag
src/: Camera.cpp  CpuRayTracer.cpp  EventHandler.cpp  GpuRayTracer.cpp  UIManager.cpp  World.cpp
tests/: CMakeLists.txt  CameraTests.cpp  EventHandlerTests.cpp
